# recruitment_slack_bot

./: daily_questions_bot.py  pyproject.toml
.github/workflows/: main.yml  random.yml
