[tool.poetry]
name = "python-slack-bot"
version = "0.1.0"
description = ""
authors = ["Noemi Kowalewska <noemikow8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
slack-sdk = "^3.26.1"
schedule = "^1.2.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
